--- a/.github/workflows/gh-pages-publish.yaml
+++ b/.github/workflows/gh-pages-publish.yaml
@@ -16,7 +16,7 @@ jobs:
     - uses: ammaraskar/sphinx-action@master
       with:
         build-command: "sphinx-build -b html . _build" # Example of using a custom build-command.
-        #docs-folder: "docs/"
+        docs-folder: "."
     - uses: actions/checkout@v2
       with:
         ref: gh-pages
